# coj-v2-solid

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 23a7069e666a_create_legal_ontology_table.py
app/api/: dependencies.py  dependencies_test.py
app/api/v1/endpoints/: hybrid_search.py  legal_ontology.py  nlp_training.py  question_answering.py  step1.py
app/core/: config.py  logging.py  security.py
app/core/contracts/: legal_article.py
app/dataset/: semantic_triplets.json
app/db/: __init__.py  doc.py
app/models/: __init__.py  legal_ontology.py
app/nlp/: dataset.py  tokenizer.py
app/repositories/: legal_article_repository.py  legal_ontology_repository.py
app/schemas/: legal_article.py  legal_ontology.py
app/services/: answer_synthesis.py  hybrid_search.py  knowledge_graph.py  legal_ontology_service.py  qa_finetuning_service.py  qa_service.py  vector_store.py
app/services/legal_article/: analyzer.py  factory.py  mapper.py  service.py
app/services/nlp/: entity_extraction_service.py  nlp_training_service.py  text_classification_service.py
scripts/: add_to_neo4j.py  build_vocabulary.py  finetune_qa_model.py  finetune_semantic_search.py  generate_semantic_triplets.py  init_db.py  run_nlp_pipeline.py  save_thai_words.py  test_qa.py  test_semantic_search.py  train_text_classifier.py
tests/: conftest.py  test_knowledge_graph.py  test_legal_article_analysis.py
