[project]
name = "coj-v2-solid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "neo4j>=5.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.24.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "spacy>=3.7.0",
    "transformers>=4.0.0",
    "alembic>=1.16.5",
    "datasets>=2.0.0",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "models*", "alembic*"]
